project(imgui C)

SET(LIB_NAME imgui)

FILE(GLOB_RECURSE HEADER_LIST *.h)
AUX_SOURCE_DIRECTORY(. SOURCE_LIST)

SOURCE_GROUP("imgui" FILES ${HEADER_LIST})
SOURCE_GROUP("imgui" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} STATIC ${HEADER_LIST} ${SOURCE_LIST})

IF(MINGW OR UNIX)
   SET_TARGET_PROPERTIES(imgui PROPERTIES OUTPUT_NAME imgui)
ENDIF()