SET(LIB_NAME jsoncpp)

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/jsoncpp)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/jsoncpp/include)

FILE(GLOB_RECURSE HEADER_LIST *.h*)
FILE(GLOB_RECURSE SOURCE_LIST *.c*)

SOURCE_GROUP("jsoncpp" FILES ${HEADER_LIST})
SOURCE_GROUP("jsoncpp" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})