project(libogg C)

SET(LIB_NAME libogg)

FILE(GLOB_RECURSE HEADER_LIST *.h)
FILE(GLOB_RECURSE SOURCE_LIST *.c)

SOURCE_GROUP("libogg" FILES ${HEADER_LIST})
SOURCE_GROUP("libogg" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})

IF(MINGW OR UNIX)
   SET_TARGET_PROPERTIES(libogg PROPERTIES OUTPUT_NAME ogg)
ENDIF()