project(libvorbis C)

SET(LIB_NAME libvorbis)

FILE(GLOB_RECURSE HEADER_LIST *.h)
FILE(GLOB_RECURSE SOURCE_LIST *.c)

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/libogg)

SOURCE_GROUP("libvorbis" FILES ${HEADER_LIST})
SOURCE_GROUP("libvorbis" FILES ${SOURCE_LIST})

ADD_LIBRARY(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})
TARGET_LINK_LIBRARIES (${LIB_NAME} libogg)

IF(MINGW OR UNIX)
   SET_TARGET_PROPERTIES(libvorbis PROPERTIES OUTPUT_NAME vorbis)
ENDIF()