SET(PROJECTNAME mygui)
INCLUDE(${PROJECTNAME}.list)
ADD_DEFINITIONS(-DMYGUI_USE_FREETYPE)
ADD_DEFINITIONS(-DMYGUI_BUILD)

IF (MSVC)
	# disable: "no suitable definition provided for explicit template instantiation request"
	# Occurs for no justifiable reason on all #includes of Singleton
	ADD_DEFINITIONS(/wd4661)
	ADD_DEFINITIONS(/wd4297)
	ADD_DEFINITIONS(/wd4275)
	ADD_DEFINITIONS(/wd4127)
ENDIF ()

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")

INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/freetype/include)
INCLUDE_DIRECTORIES(${DEPENDENCIES_PATH}/mygui/include)

# setup MyGUIEngine target
ADD_LIBRARY(${PROJECTNAME} SHARED ${MYGUI_LIB_TYPE} ${HEADER_FILES} ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES VERSION ${MYGUI_VERSION} SOVERSION ${MYGUI_VERSION_MAJOR})
TARGET_LINK_LIBRARIES(${PROJECTNAME}
	freetype
)

# platform specific dependencies
if (APPLE)
	INCLUDE_DIRECTORIES(/usr/local/include /usr/include)
	TARGET_LINK_LIBRARIES(${PROJECTNAME} ${Carbon_LIBRARY})
endif ()