PROJECT("06.CubeWorld")

SET(LIB_NAME "06.CubeWorld")

FILE(GLOB HEADER_LIST *.h)
FILE(GLOB SOURCE_LIST *.cpp)

SOURCE_GROUP("CubeWorld" FILES ${HEADER_LIST})
SOURCE_GROUP("CubeWorld" FILES ${SOURCE_LIST})

ADD_EXECUTABLE(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME} "ray-c")