PROJECT("10.AtmosphericScattering")

SET(LIB_NAME "10.AtmosphericScattering")

FILE(GLOB HEADER_LIST *.h)
FILE(GLOB SOURCE_LIST *.cpp)

SOURCE_GROUP("EnvLighting" FILES ${HEADER_LIST})
SOURCE_GROUP("EnvLighting" FILES ${SOURCE_LIST})

ADD_EXECUTABLE(${LIB_NAME} ${HEADER_LIST} ${SOURCE_LIST})
TARGET_LINK_LIBRARIES(${LIB_NAME} "ray-c")